force-app/main/default/objects/Event__c/validationRules/If_In_Person_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_In_Person_Checked</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must select Location on Event Record.</description>
    <errorConditionFormula>ISPICKVAL( Event_Type__c ,&apos;In-Person&apos;) &amp;&amp; ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If Event Type field value is In-Person then user must select Location on Event Record.</errorMessage>
</ValidationRule>