force-app/main/default/objects/Event__c/validationRules/If_Recurring_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Recurring_Checked</fullName>
    <active>true</active>
    <description>If checkbox is checked then user must need to fill Frequency field &amp; If checkbox is unchecked then User cannot select Frequency field.</description>
    <errorConditionFormula>Recurring__c=True&amp;&amp;(  NOT(ISPICKVAL( Frequency__c ,&apos;Daily&apos;)) &amp;&amp;NOT(ISPICKVAL(Frequency__c,&apos;Weekly&apos;)))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>You must select field.</errorMessage>
</ValidationRule>