force-app/main/default/objects/Event__c/validationRules/If_Recurring_Unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Recurring_Unchecked</fullName>
    <active>true</active>
    <errorConditionFormula>Recurring__c =False &amp;&amp;( ISPICKVAL( Frequency__c ,&apos;Daily&apos;)|| ISPICKVAL(Frequency__c ,&apos;Weekly&apos;))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>You cannot select any value because the recurring tab is not active</errorMessage>
</ValidationRule>