force-app/main/default/objects/Event__c/validationRules/If_Virtual_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Virtual_Checked</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>ISPICKVAL( Event_Type__c ,&apos;Virtual&apos;) &amp;&amp; NOT( ISBLANK( Location__c ) )</errorConditionFormula>
    <errorDisplayField>Event_Type__c</errorDisplayField>
    <errorMessage>You cannot select any location as the Event type field is virtual</errorMessage>
</ValidationRule>